add support for Pebble Time Round, comment out many console logs, roll out version 2.1

--- a/appinfo.json
+++ b/appinfo.json
@@ -34,11 +34,12 @@
   "shortName": "CatchOneBus",
   "targetPlatforms": [
     "aplite",
-    "basalt"
+    "basalt",
+    "chalk"
   ],
   "uuid": "775e3188-b4f2-4e4b-836a-e02080705ddf",
   "versionCode": 1,
-  "versionLabel": "2.0",
+  "versionLabel": "2.1",
   "watchapp": {
     "watchface": false
   }
